test/sema/negative/trait_impls4.impala
trait T {}
impl T for int32 {}
impl T for int32 {}
